* fix a bug if basis for pos and neg spikes have different sizes
* add some docstrings (thanks to Jose Guzman)
* sparse export for phy is now the default
* comments can now be added in the trigger/dead times files
* 4096 channels can now run on a single machine, with low memory consumption
* basic support for 3d probes, without any visualization
* cc_merge set to 1 automatically if templates on few channels are detected

=============
Release 0.8.3
=============

* automatic suppression, during meta merging, of noisy templates (for SpikeToolKit/Forest)
* during the phy export, we can automatically pre-assign labels to neurons
* fix a bug when converting to phy with dead channels
* fix a bug when converting to phy with file formats without data_offset
* speedup the estimation of the amplitude distribution
* minor fixes for clusters
* smoothing of the templates thanks to Savitzky-Golay filtering
* fix a bug when launching GUIs for file format without data offset
* can now work with scipy 1.3 and statsmodels 0.10
* isolation mode is improved, set as default and leading to better performance
* reducing overclustering with the Hartigan dip-test of unimodality
* can now set the number of dimensions for local PCA (10 by default)

=============
Release 0.8.2
=============

* add a docker file to build the software
* add support for shanks in phy 2.0
* add support for deconverting in the qt launcher
* do not create a Qt App if merging in auto mode
* waveforms are convolved with a Hanning window to boost PCA
* oversampling in now adapted as function of the sampling rate
* reduction of I/O while oversampling
* speed improvement with undersampling while cleaning the dictionary
* automation of the software for SpikeForest/SpikeToolkit benchmarks
* merging is now included in the default pipeline
* normalization of the metrics in the meta merging GUI

=============
Release 0.8.0
=============

* major improvement in the clustering. No more max_clusters parameters