@@ -16,6 +16,7 @@ Release 0.8.4
 * comments can now be added in the trigger/dead times files
 * 4096 channels can now run on a single machine, with low memory consumption
 * basic support for 3d probes, without any visualization
+* more robust to saturating channels with nan_to_num
 * cc_merge set to 1 automatically if templates on few channels are detected
 
 =============
